LPS-93024 Fix vertical align workflow status and icons, fix font-size

--- a/modules/apps/document-library/document-library-web/src/main/resources/META-INF/resources/document_library/css/main.scss
+++ b/modules/apps/document-library/document-library-web/src/main/resources/META-INF/resources/document_library/css/main.scss
@@ -293,8 +293,20 @@
 		margin-top: 3em;
 	}
 
+	.file-entry-status,
+	.card-detail {
+		align-items: center;
+		display: flex;
+		font-size: 1rem;
+		margin-bottom: -5px;
+	}
+
 	.taglib-workflow-status {
-		margin-bottom: 5px;
+		margin-right: 4px;
+
+		.workflow-status {
+			vertical-align: text-bottom;
+		}
 	}
 
 	.document-library-breadcrumb ul {
